// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useDeliveryMomentOptions > returns delivery moment options with package type digital_stamp 1`] = `
[
  {
    "carrier": "postnl",
    "label": {
      "args": undefined,
      "key": "packageTypeDigitalStamp",
    },
    "price": 0,
    "value": {
      "carrier": "postnl",
      "date": null,
      "deliveryType": "standard",
      "packageType": "digital_stamp",
      "shipmentOptions": [],
      "time": null,
    },
  },
  {
    "carrier": "postnl:123",
    "label": {
      "args": undefined,
      "key": "packageTypeDigitalStamp",
    },
    "price": 4,
    "value": {
      "carrier": "postnl:123",
      "date": null,
      "deliveryType": "standard",
      "packageType": "digital_stamp",
      "shipmentOptions": [],
      "time": null,
    },
  },
]
`;

exports[`useDeliveryMomentOptions > returns delivery moment options with package type mailbox 1`] = `
[
  {
    "carrier": "postnl",
    "label": {
      "args": undefined,
      "key": "packageTypeMailbox",
    },
    "price": 0,
    "value": {
      "carrier": "postnl",
      "date": null,
      "deliveryType": "standard",
      "packageType": "mailbox",
      "shipmentOptions": [],
      "time": null,
    },
  },
  {
    "carrier": "postnl:123",
    "label": {
      "args": undefined,
      "key": "packageTypeMailbox",
    },
    "price": 5,
    "value": {
      "carrier": "postnl:123",
      "date": null,
      "deliveryType": "standard",
      "packageType": "mailbox",
      "shipmentOptions": [],
      "time": null,
    },
  },
]
`;

exports[`useDeliveryMomentOptions > returns delivery moment options with package type package 1`] = `
[
  {
    "carrier": "postnl",
    "label": {
      "args": undefined,
      "key": "3:00 PM – 4:00 PM",
      "plain": true,
    },
    "price": 3,
    "value": {
      "carrier": "postnl",
      "date": "2025-01-15 24:00:00",
      "deliveryType": "standard",
      "packageType": "package",
      "shipmentOptions": [
        {
          "name": "signature",
          "schema": {
            "enum": [
              true,
              false,
            ],
            "type": "boolean",
          },
        },
        {
          "name": "only_recipient",
          "schema": {
            "enum": [
              true,
              false,
            ],
            "type": "boolean",
          },
        },
      ],
      "time": {
        "key": "3:00 PM – 4:00 PM",
        "plain": true,
      },
    },
  },
  {
    "carrier": "postnl:123",
    "label": {
      "args": undefined,
      "key": "3:00 PM – 4:00 PM",
      "plain": true,
    },
    "price": 456,
    "value": {
      "carrier": "postnl:123",
      "date": "2025-01-15 24:00:00",
      "deliveryType": "standard",
      "packageType": "package",
      "shipmentOptions": [
        {
          "name": "signature",
          "schema": {
            "enum": [
              true,
              false,
            ],
            "type": "boolean",
          },
        },
        {
          "name": "only_recipient",
          "schema": {
            "enum": [
              true,
              false,
            ],
            "type": "boolean",
          },
        },
      ],
      "time": {
        "key": "3:00 PM – 4:00 PM",
        "plain": true,
      },
    },
  },
]
`;

exports[`useDeliveryMomentOptions > returns delivery moment options with package type package_small 1`] = `
[
  {
    "carrier": "postnl",
    "label": {
      "args": undefined,
      "key": "3:00 PM – 4:00 PM",
      "plain": true,
    },
    "price": 6,
    "value": {
      "carrier": "postnl",
      "date": "2025-01-15 24:00:00",
      "deliveryType": "standard",
      "packageType": "package_small",
      "shipmentOptions": [
        {
          "name": "signature",
          "schema": {
            "enum": [
              true,
              false,
            ],
            "type": "boolean",
          },
        },
        {
          "name": "only_recipient",
          "schema": {
            "enum": [
              true,
              false,
            ],
            "type": "boolean",
          },
        },
      ],
      "time": {
        "key": "3:00 PM – 4:00 PM",
        "plain": true,
      },
    },
  },
  {
    "carrier": "postnl:123",
    "label": {
      "args": undefined,
      "key": "3:00 PM – 4:00 PM",
      "plain": true,
    },
    "price": 0,
    "value": {
      "carrier": "postnl:123",
      "date": "2025-01-15 24:00:00",
      "deliveryType": "standard",
      "packageType": "package_small",
      "shipmentOptions": [
        {
          "name": "signature",
          "schema": {
            "enum": [
              true,
              false,
            ],
            "type": "boolean",
          },
        },
        {
          "name": "only_recipient",
          "schema": {
            "enum": [
              true,
              false,
            ],
            "type": "boolean",
          },
        },
      ],
      "time": {
        "key": "3:00 PM – 4:00 PM",
        "plain": true,
      },
    },
  },
]
`;
